Fix whitespace

--- a/addon/components/canvas-block-paragraph/styles.css
+++ b/addon/components/canvas-block-paragraph/styles.css
@@ -1,3 +1,3 @@
 .canvas-block-paragraph {
-  composes: canvas-block from '../canvas-block/styles';
+  composes: canvas-block-editable from '../canvas-block-editable/styles';
 }
