--- a/addon/components/canvas-block-title/styles.css
+++ b/addon/components/canvas-block-title/styles.css
@@ -1,7 +1,7 @@
 @value --block-placeholder-color from "canvas-editor/styles/theme";
 
 .canvas-block-title {
-  composes: canvas-block from '../canvas-block/styles';
+  composes: canvas-block-editable from '../canvas-block-editable/styles';
   font-size: 2rem;
   font-weight: bold;
   position: relative;
